apps/api-gateway/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nh-api-gateway
  labels:
    name: nh-api-gateway
