apps/api-gateway/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-svc
  namespace: nexus-service
  labels:
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/part-of: nexus-healthcare-system
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      name: http
    - port: 50050
      targetPort: 50050
      name: grpc
  selector:
    app: api-gateway
